syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.amsidh.mvc.model";

message AccountBalanceRequest{
  int32 account_number = 1;
  int32 withdraw_amount=2;
}

message Money{
  int32 account_number = 1;
  int32 amount = 2;
}

